<resources>
    <string name="app_name">Grupo Financiero Ciencias</string>
    <string name="app_nameCorto">G.F. Ciencias</string>
    <string name="recordarme">Recordarme</string>
    <string name="eMail">E-mail</string>
    <string name="password">Contraseña</string>
    <string name="confPassword">Confirmar contraseña</string>
    <string name="iniciarSesion">Iniciar Sesión</string>
    <string name="registrarse">Registrarse</string>
    <string name="oInicio"> Iniciar sesión con: </string>
    <string name="registro">Registro</string>
    <string name="nombre">Nombre(s)</string>
    <string name="apellidos">Apellidos</string>
    <string name="apellidoM">Apellido Materno</string>
    <string name="genero">Género</string>
    <string name="siguiente"> Siguiente </string>
    <string name="nombreCard"> Nombre en la tarjeta </string>
    <string name="numeroCard"> Número de tarjeta </string>
    <string name="fechaVenc"> Fecha de vencimiento: </string>
    <string name="cvv"> CVV: </string>
    <string name="registrar"> Registrar </string>
    <string name="registroExitoso"> Registro exitoso </string>
    <string name="volverInicio"> Volver al inicio </string>
    <string name="cuenta"> Cuenta: **************6543 </string>
    <string name="saldo"> Saldo: 8,570 </string>
    <string name="retiro"> Retiro </string>
    <string name="transferencia"> Transferencia </string>
    <string name="salir"> Salir </string>
    <string name="consultar_mov"> Consulta Movimientos </string>
    <string name="usuario"> Sofía Vivanco Gutiérrez </string>

    <string name="navigation_drawer_open">Drawer Open</string>
    <string name="navigation_drawer_close">Drawer Closed</string>

    <string name="cerrarSesion"> Cerrar sesión </string>
    <string name="settings"> Cofiguración </string>
    <string name="contacto"> Contacto </string>
    <string name="opSinTar"> Operaciones sin tarjeta </string>
    <string name="perfil"> Perfil </string>
    <string name="estadoCuenta"> Estados de cuenta </string>
    <string name="reporTarjeta"> Reportar cargo o tarjeta </string>
    <string name="inversiones"> Inversiones </string>
    <string name="pagarServ"> Pagar servicios </string>
    <string name="operDigit"> Operaciones digitales </string>
    <string name="recargaPhone"> Recargar teléfono </string>
    <string name="discount"> Descuentos y promociones </string>
    <string name="misFinanzas"> Mis finanzas </string>
    <string name="opciones"> Más opciones </string>
    <string name="rateApp"> Calificar aplicación </string>
    <string name="reportar"> Reportar </string>
    <string name="about"> Acerca de G.F. Ciencias </string>
    <string name="search"> Búsqueda </string>


    <string name="title_activity_main_drawer">MainActivity_drawer</string>

    <string name="nav_header_title">Android Studio</string>

    <string name="nav_header_subtitle">android.studio@android.com</string>

    <string name="nav_header_desc">Navigation header</string>

    <string name="action_settings">Settings</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_main2">MainActivity2</string>

</resources>